fixed history overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ footer {
  bottom:0px;
 }
 
+#transactionTable {
+  display: none;
+}
+
 #about {
   margin-left: 1rem;
 }
@@ -92,8 +96,6 @@ h1 {
   display:none;
 }
 
-
-
 thead {
   background-color: #2d5986;
 }
@@ -103,7 +105,7 @@ thead th {
 }
 
 #settingsButton2 {
-  display: none;
+  display: inline-block;
   margin-right: 0.1rem;
 }
 
@@ -265,6 +267,14 @@ thead th {
     top: 0;
     height: 100%;
     overflow-y: auto;
+  }
+
+  #transactionTable {
+    display: inline-block;
+  }
+
+  #transactionList {
+    display: none;
   }
 
   #settingsButton2 {
